--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".ui.main.HomeActivity"
     android:gravity="bottom"
     app:umanoDragView="@id/dragView"
     app:umanoPanelHeight="82dp"
@@ -34,10 +34,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/img_button_start" />
+            app:layout_constraintBottom_toTopOf="@id/imagebutton_start" />
 
         <ImageButton
-            android:id="@+id/img_button_start"
+            android:id="@+id/imagebutton_start"
             android:layout_width="230dp"
             android:layout_height="230dp"
             android:src="@drawable/ic_start"
@@ -45,10 +45,10 @@
             android:layout_marginBottom="50dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/button_latest"/>
+            app:layout_constraintBottom_toTopOf="@id/layout_latest"/>
 
        <androidx.constraintlayout.widget.ConstraintLayout
-           android:id="@+id/button_latest"
+           android:id="@+id/layout_latest"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="13dp"
@@ -74,7 +74,7 @@
                app:layout_constraintStart_toStartOf="parent" />
 
            <TextView
-               android:id="@+id/latest_result_text"
+               android:id="@+id/textview_latest_result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_bold"
@@ -87,7 +87,7 @@
                app:layout_constraintStart_toStartOf="parent" />
 
            <TextView
-               android:id="@+id/latest_result_time"
+               android:id="@+id/textview_latest_result_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_bold"
