--- a/app/src/main/res/layout/activity_join_part1.xml
+++ b/app/src/main/res/layout/activity_join_part1.xml
@@ -7,16 +7,15 @@
     tools:context=".ui.join.JoinPart1Activity">
 
     <View
-        android:id="@+id/view_progressBar"
         android:layout_width="120dp"
         android:layout_height="5dp"
         android:background="@color/main_theme_blue"
-        app:layout_constraintBottom_toTopOf="@+id/textview_joinMembership"
+        app:layout_constraintBottom_toTopOf="@id/textview_join_membership"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textview_joinMembership"
+        android:id="@+id/textview_join_membership"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_bold"
@@ -30,21 +29,20 @@
         app:layout_constraintVertical_bias="0.084" />
 
     <ImageButton
-        android:id="@+id/button_back"
+        android:id="@+id/imagebutton_back"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:backgroundTint="@android:color/transparent"
-        android:clickable="false"
         android:contentDescription="@string/blank_text"
         android:scaleType="centerInside"
         android:src="@drawable/ic_back"
-        app:layout_constraintBottom_toBottomOf="@id/textview_joinMembership"
-        app:layout_constraintEnd_toStartOf="@id/textview_joinMembership"
+        app:layout_constraintBottom_toBottomOf="@id/textview_join_membership"
+        app:layout_constraintEnd_toStartOf="@id/textview_join_membership"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/textview_joinMembership" />
+        app:layout_constraintTop_toTopOf="@id/textview_join_membership" />
 
     <TextView
-        android:id="@+id/textview_joinEmail"
+        android:id="@+id/textview_join_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="289dp"
@@ -52,9 +50,9 @@
         android:text="@string/join_email"
         android:textColor="@color/black"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/textview_joinMembership"
-        app:layout_constraintStart_toStartOf="@+id/button_back"
-        app:layout_constraintTop_toBottomOf="@id/textview_joinMembership" />
+        app:layout_constraintEnd_toEndOf="@id/textview_join_membership"
+        app:layout_constraintStart_toStartOf="@id/imagebutton_back"
+        app:layout_constraintTop_toBottomOf="@id/textview_join_membership" />
 
     <EditText
         android:id="@+id/edittext_email"
@@ -66,10 +64,10 @@
         android:padding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_joinEmail" />
+        app:layout_constraintTop_toBottomOf="@id/textview_join_email" />
 
     <TextView
-        android:id="@+id/textview_overlapEmail"
+        android:id="@+id/textview_overlap_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_bold"
@@ -81,7 +79,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edittext_email" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_certificationCode"
+        android:id="@+id/button_send"
         style="@style/DefaultButton"
         android:layout_width="318dp"
         android:layout_height="wrap_content"
