--- a/app/src/main/res/layout/activity_problem_yn.xml
+++ b/app/src/main/res/layout/activity_problem_yn.xml
@@ -7,13 +7,12 @@
     android:background="@color/main_theme_blue">
 
     <ImageButton
-        android:id="@+id/field_button_back"
+        android:id="@+id/imagebutton_back"
         android:layout_width="42dp"
         android:layout_height="42dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="15dp"
         android:backgroundTint="@android:color/transparent"
-        android:clickable="false"
         android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,19 +25,18 @@
         android:includeFontPadding="false"
         android:textColor="@color/main_theme_gray"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@id/field_button_back"
+        app:layout_constraintBottom_toBottomOf="@id/imagebutton_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/field_button_back"
+        app:layout_constraintTop_toTopOf="@id/imagebutton_back"
         tools:text="AB_title" />
 
     <TextView
         android:id="@+id/subtitle"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/notosanskr_medium"
         android:includeFontPadding="false"
-        android:paddingHorizontal="30dp"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="18sp"
