--- a/app/src/main/res/layout/activity_solution_desc.xml
+++ b/app/src/main/res/layout/activity_solution_desc.xml
@@ -4,145 +4,124 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white" >
+    android:background="@color/white">
 
-    <FrameLayout
-        android:id="@+id/field_button_back"
+    <ImageButton
+        android:id="@+id/button_back"
         android:layout_width="42dp"
         android:layout_height="42dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="15dp"
+        android:backgroundTint="@android:color/transparent"
+        android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/ic_back"
-            android:clickable="false" />
-
-    </FrameLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/field_title"
+    <TextView
+        android:id="@+id/textview_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="@font/notosanskr_medium"
+        android:includeFontPadding="false"
+        android:textColor="@color/main_theme_gray"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@id/textview_subtitle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/field_button_back"
-        app:layout_constraintBottom_toBottomOf="@id/field_button_back" >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/button_back"
+        tools:text="문제 해결 세부 템플릿" />
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosanskr_medium"
-            android:includeFontPadding="false"
-            android:textColor="@color/main_theme_gray"
-            android:textSize="16sp"
-            tools:text="문제 해결 세부 템플릿"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/subtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosanskr_regular"
-            android:includeFontPadding="false"
-            android:textColor="@color/main_theme_subcyan"
-            android:textSize="12sp"
-            tools:text="해결안 템플릿"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/textview_subtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/notosanskr_regular"
+        android:includeFontPadding="false"
+        android:textColor="@color/main_theme_subcyan"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/button_back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textview_title"
+        tools:text="해결안 템플릿" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/field_progressbar"
         android:layout_width="match_parent"
         android:layout_height="16dp"
         android:layout_marginTop="14dp"
-        app:layout_constraintTop_toBottomOf="@id/field_title">
+        app:layout_constraintTop_toBottomOf="@id/textview_subtitle">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="300dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/field_progressbar" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/field_description"
+    <TextView
+        android:id="@+id/text_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="22dp"
+        android:fontFamily="@font/notosanskr_regular"
+        android:includeFontPadding="false"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image"
+        tools:text="내용이 입력됩니다.내용이 입력됩니다." />
+
+    <TextView
+        android:id="@+id/text_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="22dp"
-        android:paddingHorizontal="16dp"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/notosanskr_regular"
+        android:includeFontPadding="false"
+        android:textColor="@color/main_theme_gray"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image" >
+        app:layout_constraintTop_toBottomOf="@id/text_content"
+        tools:text="세부내용이 입력됩니다.세부내용이 입력됩니다.세부내용이 입력됩니다.세부내용이 입력됩니다.세부내용이 입력됩니다.세부내용이 입력됩니다." />
 
-        <TextView
-            android:id="@+id/text_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosanskr_regular"
-            android:includeFontPadding="false"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            tools:text="내용이 입력됩니다.내용이 입력됩니다."
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/text_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:fontFamily="@font/notosanskr_regular"
-            android:includeFontPadding="false"
-            android:textAlignment="textStart"
-            android:textColor="@color/main_theme_gray"
-            android:textSize="12sp"
-            tools:text="세부내용이 입력됩니다.세부내용이 입력됩니다.세부내용이 입력됩니다.세부내용이 입력됩니다.세부내용이 입력됩니다.세부내용이 입력됩니다."
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_content" />
-
-        <TextView
-            android:id="@+id/text_another_prob"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:fontFamily="@font/notosanskr_regular"
-            android:includeFontPadding="false"
-            android:textAlignment="textStart"
-            android:textColor="@color/general_theme_error"
-            android:textSize="12sp"
-            tools:text="문제해결 - 해당되는 포트가 본체에 없는 경우"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_description" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/text_another_prob"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/notosanskr_regular"
+        android:includeFontPadding="false"
+        android:textAlignment="textStart"
+        android:textColor="@color/general_theme_error"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_description"
+        tools:text="문제해결 - 해당되는 포트가 본체에 없는 경우" />
 
     <Button
         android:id="@+id/button_complete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="22dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/bg_rectangle_round_line"
-        app:backgroundTint="@color/main_theme_blue"
         android:fontFamily="@font/notosanskr_bold"
         android:includeFontPadding="false"
+        android:text="@string/go_next"
         android:textColor="@color/main_theme_blue"
         android:textSize="16sp"
-        android:text="@string/go_next"
-        app:layout_constraintStart_toStartOf="parent"
+        app:backgroundTint="@color/main_theme_blue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/field_description" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_another_prob" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
