--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,6 @@
 
     <style name="DefaultRadioButton" parent="Widget.AppCompat.CompoundButton.RadioButton">
         <item name="android:background">@drawable/selector_default_radio_button</item>
-        <item name="android:button">null</item>
+        <item name="android:button">@null</item>
     </style>
 </resources>
